# Nifty_option_algo

./: .gitignore  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: ce2cf05215ee_initial_schema_all_tables.py
data/: upstox_token.json
scripts/: manual_token_setup.py  reset_database.py  run_panic_producer.py  run_producer.py  run_system.py  setup_upstox.py  test_analysis_engine.py  test_connection.py  test_event_system.py
src/analysis/: __init__.py  candle_score.py  metrics_calculator.py  orderbook_analyzer.py  seller_detector.py
src/auth/: upstox_auth.py
src/config/: settings.py
src/consumers/: __init__.py  analysis_consumer.py  candle_builder.py  storage_consumer.py
src/database/: engine.py  models.py  service.py
src/event_bus/: __init__.py  bus.py
src/events/: __init__.py  base.py  candle_events.py  signal_events.py  tick_events.py
src/instruments/: __init__.py  query_service.py  sync_service.py
src/managers/: instrument_manager.py
src/orchestrator/: __init__.py  health_monitor.py  main.py  service_manager.py
src/producers/: __init__.py  mock_producer.py  panic_mock_producer.py  upstox_live_producer.py  upstox_producer.py
src/utils/: timezone.py
